[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Character_Movement.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player/Interaction_Area.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Vacuum_Area.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Player/Interaction_Handler.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Player/PlayerAnimator.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Player/Player_Overlord.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=8]
[ext_resource path="res://Scripts/y_movement.gd" type="Script" id=9]
[ext_resource path="res://Scripts/x_movement.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Rotate_by_Velocity.gd" type="Script" id=11]

[sub_resource type="CapsuleShape" id=1]
radius = 0.507588
height = 1.05261

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0256 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:depth")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.979924 ]
}

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0256, 0.8, 1.026 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 2.0, 1.7, 2.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:depth")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.979924, 0.9, 0.98 ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Planting"

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachine" id=8]
states/Idle/node = SubResource( 4 )
states/Idle/position = Vector2( -89.6408, 99 )
states/Planting/node = SubResource( 5 )
states/Planting/position = Vector2( 127.359, 89 )
transitions = [ "Idle", "Planting", SubResource( 6 ), "Planting", "Idle", SubResource( 7 ) ]
graph_offset = Vector2( -348.641, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[sub_resource type="SphereShape" id=10]
radius = 1.48606

[sub_resource type="ConvexPolygonShape" id=11]
points = PoolVector3Array( 5, 1, 2, 5, 1, -2, 5, -1, -2, 5, -1, 2, 0, -1, 0.5, 0, 1, 0.5, 0, -1, -0.5, 0, 1, -0.5 )

[node name="Player_Overlord" type="Spatial"]
script = ExtResource( 7 )
pivot_path = NodePath("KinematicBody/InteractionRotator")

[node name="Interaction_Handler" type="Node" parent="."]
script = ExtResource( 5 )
interact_area_path = NodePath("../KinematicBody/InteractionRotator/Interaction_Area")

[node name="PlantingTime" type="Timer" parent="Interaction_Handler"]
wait_time = 2.0

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 8 )

[node name="y_movement" type="Node" parent="."]
script = ExtResource( 9 )
ground_raycast_path = NodePath("../KinematicBody/Ground_Raycast")

[node name="x_movement" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Rotate" type="Node" parent="."]
script = ExtResource( 11 )
Rotation_Node_Path = NodePath("../KinematicBody/InteractionRotator")

[node name="KinematicBody" type="KinematicBody" parent="."]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 0.599638, 0.800271, 0, -0.800271, 0.599638, -0.190146, 12.0613, 7.20485 )
fov = 50.0

[node name="Ground_Raycast" type="RayCast" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.907561, 0 )
enabled = true
cast_to = Vector3( 0, -0.2, 0 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="KinematicBody"]
width = 1.0256
depth = 0.979924

[node name="PlayerAnimator" type="AnimationPlayer" parent="KinematicBody/CSGBox"]
anims/Idle = SubResource( 2 )
anims/Planting = SubResource( 3 )
script = ExtResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="KinematicBody/CSGBox/PlayerAnimator"]
tree_root = SubResource( 8 )
anim_player = NodePath("..")
parameters/playback = SubResource( 9 )

[node name="InteractionRotator" type="Spatial" parent="KinematicBody"]

[node name="Interaction_Area" type="Area" parent="KinematicBody/InteractionRotator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody/InteractionRotator/Interaction_Area"]
shape = SubResource( 10 )

[node name="Vacuum_Area" type="Area" parent="KinematicBody/InteractionRotator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.487175, 0, 0 )
collision_layer = 0
collision_mask = 16
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody/InteractionRotator/Vacuum_Area"]
shape = SubResource( 11 )
[connection signal="change_anim_state" from="Interaction_Handler" to="KinematicBody/CSGBox/PlayerAnimator" method="_on_Interaction_Handler_change_anim_state"]
[connection signal="timeout" from="Interaction_Handler/PlantingTime" to="Interaction_Handler" method="_on_PlantingTime_timeout"]
[connection signal="area_interaction" from="KinematicBody" to="Interaction_Handler" method="interact"]
[connection signal="area_entered" from="KinematicBody/InteractionRotator/Vacuum_Area" to="KinematicBody/InteractionRotator/Vacuum_Area" method="_on_Vacuum_Area_area_entered"]
[connection signal="area_exited" from="KinematicBody/InteractionRotator/Vacuum_Area" to="KinematicBody/InteractionRotator/Vacuum_Area" method="_on_Vacuum_Area_area_exited"]
